@@ -28,8 +28,10 @@ Version 1.0.8
      * Xorg configuration (milian)
   -  set_language will not reset any language settings by default anymore.
      You can use the additional $force_reset param for this. (milian)
-  -  setup caches for parsing on demand, makes stylesheet generators fast again (milian)
-  -  reduce strict errors & notices for language files (milian)
+  -  Added support for RegExp-based Strict Blocks (BenBE)
+  -  Fixed highlighting incorrectly stopping at ?> in PHP (SF#1330968, BenBE)
+  -  Setup caches for parsing on demand, makes stylesheet generators fast again (milian)
+  -  Reduce strict errors & notices for language files (milian)
   -  Fixed symbol highlighting with C++ sometimes missing keywords after ; and comments (BenBE)
   -  Improved comment handling with TCL (Lars Hellström, BenBE)
   -  Removed explicit escaping of / in Regular Expressions (BenBE)
